@@ -1,6 +1,10 @@
 2015-06-08  Gregory Soyez  <soyez@fastjet.fr>
 
 	* post-process.sh:
+	added a consistency check that the corresponding u & g files are
+	different
+
+	* post-process.sh:
 	used the latest style files
 
 	* separation.plot -> style-separation.plot:
